examples/passing/TransitiveImport/Middle.purs
module Middle where

import Test as Test

middle = Test.test
