examples/failing/TypeWildcards1.purs
module TypeWildcards where

import Prelude

type Test = _

